Fix the flickering glitch that happens when touching the articles to swipe.
To fix it, we are hiding all the tabs that are off screen. But that leads to a worse user experience. Needs to be worked on more.

--- a/apps/kiosque/resources/stylesheets/kiosque.css
+++ b/apps/kiosque/resources/stylesheets/kiosque.css
@@ -288,10 +288,6 @@ $theme.collection {
   background: transparent;
 }
 
-$theme.tab-hidden {
-  opacity: 0;
-}
-
 $theme.article-hidden {
   -webkit-transform: scale3d(0,0,1);
 }
