--- a/frameworks/iweb/frameworks/iweb/english.lproj/tab.css
+++ b/frameworks/iweb/frameworks/iweb/english.lproj/tab.css
@@ -37,3 +37,7 @@ $theme.sc-tab-bar-view {
   }
 }
 
+$theme.tab-hidden {
+  opacity: 0;
+}
+
